--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+
+        {{ include('partials/_flash_messages.html.twig') }}
+
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
